test/libsolidity/syntaxTests/inlineAssembly/variable_use_before_decl_1.sol
contract C {
    function f() public pure {
        assembly {
            x := 2
            let x := 3
        }
    }
}
// ----
// DeclarationError 1133: (75-76): Variable x used before it was declared.
